--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  encrypt: ^5.0.3
   cached_network_image: ^3.3.0
   shared_preferences: ^2.2.2
+  logger: ^2.0.2+1
+  photo_view: ^0.14.0
+
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +69,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-  - images/
+    - image/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
