--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   shared_preferences: ^2.2.2
   logger: ^2.0.2+1
   photo_view: ^0.14.0
-
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
